@@ -21,6 +21,7 @@
  403066 getting new groups, conditional jump on uninitialised value (Charles)
  402704 queue size too small in task-pane.cc (Shana)
  389817 article not shown if another DL in progress (Samuli Karkkainen)
+ 403076 focus is incorrect when returning to header pane (Walt)
 
 0.121 "Dortmunder"
  390784 crash when dragging over URL (Paul Williamson)
